added all project files

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -94,6 +94,8 @@
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/dependencies/angular.js"></script>
     <script src="/js/dependencies/angular-route.js"></script>
+    <script src="/js/dependencies/ng-file-upload-shim.js"></script>
+    <script src="/js/dependencies/ng-file-upload.js"></script>
     <script src="/js/dependencies/ui-bootstrap.js"></script>
     <script src="/js/app.js"></script>
     <script src="/js/controllers/authentication/AuthenticationController.js"></script>
